# openchatui

./: README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.history/: .gitignore_20260315163832  .gitignore_20260315164042
docs/: architecture.md  development.md  providers.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sandbox/: Dockerfile
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  conversations.rs  mod.rs  models.rs  sandbox.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/sandbox/: docker.rs  manager.rs  mod.rs  trigger.rs
src/components/chat/: ChatView.tsx  FileAttachment.tsx  InputBar.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  StreamingBubble.tsx  WelcomeScreen.tsx
src/components/common/: Button.tsx  Modal.tsx
src/components/layout/: MainPanel.tsx  Sidebar.tsx  SplitPaneLayout.tsx
src/components/sandbox/: DiffViewer.tsx  ProposalView.tsx  SandboxPanel.tsx  SandboxStatusBar.tsx  SandboxTerminal.tsx
src/components/settings/: ModelSelector.tsx  SettingsModal.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: sandboxCommands.ts  tauriCommands.ts
src/stores/: conversationStore.ts  sandboxStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: conversation.ts  provider.ts  sandbox.ts  settings.ts
